# LedgerDesk

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: main.py  seed.py
apps/api/app/core/: auth.py  config.py  logging.py
apps/api/app/models/: __init__.py  agent.py  audit.py  case.py  policy.py  user.py
apps/api/app/routers/: audit.py  auth.py  cases.py  metrics.py  policies.py  prompts.py  retrieval.py  tools.py  users.py  workflow.py
apps/api/app/services/: case_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_add_token_usage.py
apps/api/tests/: test_schemas.py  test_tools.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/audit/: page.tsx
apps/web/src/app/cases/: page.tsx
apps/web/src/app/cases/[id]/: page.tsx
apps/web/src/app/escalations/: page.tsx
apps/web/src/app/evaluation/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/metrics/: page.tsx
apps/web/src/app/policies/: page.tsx
apps/web/src/app/prompts/: page.tsx
apps/web/src/components/layout/: ClientLayout.tsx  Sidebar.tsx
apps/web/src/components/ui/: ConfidenceIndicator.tsx  Toast.tsx
apps/web/src/lib/: api.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: index.ts
