[project]
name = "ledgerdesk"
version = "0.1.0"
description = "Agentic financial operations copilot for transaction exception handling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "tests"]

[tool.ruff.format]
quote-style = "double"
